--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.1",
+    "axios": "^1.7.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "exec": "^0.2.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
+    "openai": "^4.57.0",
+    "path": "^0.12.7",
     "zod": "^3.23.8"
   }
 }
